--- a/WebGIS.html
+++ b/WebGIS.html
@@ -47,7 +47,7 @@
   <nav class="bg-blue-700 text-white px-6 py-4 shadow-md flex justify-between items-center">
     <div class="text-2xl font-bold">Air Quality Mapping</div>
     <div class="space-x-6 text-lg">
-      <a href="Homepage.html" class="hover:underline">Home</a>
+      <a href="index.html" class="hover:underline">Home</a>
       <a href="Results.html" class="hover:underline">Results</a>
       <a href="WebGIS.html" class="underline font-semibold">WebGIS</a>
     </div>
