--- a/Results.html
+++ b/Results.html
@@ -12,7 +12,7 @@
   <nav class="bg-blue-700 text-white px-6 py-4 shadow-md flex justify-between items-center">
     <div class="text-2xl font-bold">Air Quality Mapping</div>
     <div class="space-x-6 text-lg">
-      <a href="Homepage.html" class="hover:underline">Home</a>
+      <a href="index.html" class="hover:underline">Home</a>
       <a href="Results.html" class="underline font-semibold">Results</a>
       <a href="WebGIS.html" class="hover:underline">WebGIS</a>
     </div>
