--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <nav class="bg-blue-700 text-white px-6 py-4 shadow-md flex justify-between items-center sticky top-0 z-50">
     <div class="text-2xl font-bold">Slovenia Air Quality Mapping</div>
     <div class="space-x-6 text-lg">
-      <a href="#top" class="hover:underline">Home</a>
+      <a href="index.html" class="hover:underline">Home</a>
       <a href="Results.html" class="hover:underline">Results</a>
       <a href="WebGIS.html" class="hover:underline">WebGIS</a>
     </div>
