--- a/Results.html
+++ b/Results.html
@@ -67,7 +67,7 @@
         <p class="text-sm text-gray-700">PM2.5 Concentration Map 2020</p>
       </div>
       <div class="bg-blue-100 p-4 rounded-lg shadow hover:scale-105 transition text-center">
-        <img src="https://raw.githubusercontent.com/vidyl911/GIS-Project-2025/main/Slovenia_pm2p5%20_2017-2021_AAD_map%20_2022.png" alt="Map J" class="rounded mb-3 w-full">
+        <img src="https://raw.githubusercontent.com/vidyl911/GIS-Project-2025/main/Slovenia_pm2p5_2017-2021_AAD_map_2022.png" alt="Map J" class="rounded mb-3 w-full">
         <p class="text-sm text-gray-700">5-Year Mean vs 2022 AAD</p>
       </div>
       <div class="bg-blue-100 p-4 rounded-lg shadow hover:scale-105 transition text-center">
